correction erreur ligne 9

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <style type="text/css">
         .init{
-            width 75%;
+            width: 70%;
             margin: 0 auto;
             padding: 45px;
        }
